Fixed chrome scrollbar in delivery page

--- a/ShiptechV2/apps/shiptech/src/styles.scss
+++ b/ShiptechV2/apps/shiptech/src/styles.scss
@@ -29,3 +29,10 @@
         padding-right: 30px !important;
     }
 }
+
+::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+    background-color: transparent;
+}
+  
